html layout + css reset added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 
 <body>
+    <div class="nav">
+        <div class="container">
+            <div class="logo">Header logo</div>
+            <div class="nav">
+                <ul>
+                    <li>Link 1</li>
+                    <li>Link 2</li>
+                    <li>Link 3</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
+    <div class="header">
+        <div class="container">
+            <div>
+                <h1>This is a H1</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis veniam ex eveniet sapiente hic,
+                    tempora
+                    beatae dolorum cumque minima eaque ducimus ipsam velit magni commodi quae omnis reprehenderit
+                    voluptates
+                    aliquid!</p>
+                <button class="primary-button">Sign Up</button>
+            </div>
+            <img src="#" alt="">
+        </div>
+    </div>
+
+    <section class="team">
+        <div class="container">
+            <h2>Our Team</h2>
+            <div class="person">
+                <img src="#" alt="">
+                <p class="person-name">
+                    Adsy Eli
+                </p>
+                <p class="person-title">
+                    Web Dev
+                </p>
+            </div>
+            <div class="person">
+                <img src="#" alt="">
+                <p class="person-name">
+                    Adsy Eli
+                </p>
+                <p class="person-title">
+                    Web Dev
+                </p>
+            </div>
+            <div class="person">
+                <img src="#" alt="">
+                <p class="person-name">
+                    Adsy Eli
+                </p>
+                <p class="person-title">
+                    Web Dev
+                </p>
+            </div>
+            <div class="person">
+                <img src="#" alt="">
+                <p class="person-name">
+                    Adsy Eli
+                </p>
+                <p class="person-title">
+                    Web Dev
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonial">
+        <div class="container">
+            <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore beatae atque eos,
+                mollitia
+                dolorum a libero laboriosam ipsum natus modi eaque voluptatibus fugit quo inventore officiis quasi nam
+                ipsam."</blockquote>
+            <p>- Person</p>
+        </div>
+    </section>
+
+    <section class="cta">
+        <div class="container">
+            <div class="cta-text">
+                <h3>Call to action!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <button class="secondary-button">Sign Up</button>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Copyright © Adsy Eli 2022</p>
+        </div>
+    </footer>
 </body>
 
 </html>
