--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Landing Page</title>
+    <title>Monkey Business</title>
 </head>
 
 <body>
     <div class="nav">
         <div class="container">
-            <div class="logo">Header logo</div>
+            <div class="logo">Monkey Business</div>
             <div class="nav">
                 <ul>
                     <li>Link 1</li>
@@ -34,7 +34,7 @@
                     aliquid!</p>
                 <button class="primary-button">Sign Up</button>
             </div>
-            <img src="#" alt="">
+            <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
         </div>
     </div>
 
@@ -42,7 +42,7 @@
         <div class="container">
             <h2>Our Team</h2>
             <div class="person">
-                <img src="#" alt="">
+                <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
                     Adsy Eli
                 </p>
@@ -51,7 +51,7 @@
                 </p>
             </div>
             <div class="person">
-                <img src="#" alt="">
+                <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
                     Adsy Eli
                 </p>
@@ -60,7 +60,7 @@
                 </p>
             </div>
             <div class="person">
-                <img src="#" alt="">
+                <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
                     Adsy Eli
                 </p>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="person">
-                <img src="#" alt="">
+                <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
                     Adsy Eli
                 </p>
