--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap"
+        rel="stylesheet">
     <title>Monkey Business</title>
 </head>
 
 <body>
     <div class="nav">
         <div class="container">
-            <div class="logo">Monkey Business</div>
+            <div class="logo nav-logo-text">Monkey Business</div>
             <div class="nav">
                 <ul>
                     <li>Link 1</li>
@@ -26,8 +30,9 @@
     <div class="header">
         <div class="container">
             <div>
-                <h1>This is a H1</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis veniam ex eveniet sapiente hic,
+                <h1 class="hero-primary-text">This is a H1</h1>
+                <p class="hero-secondary-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis veniam ex
+                    eveniet sapiente hic,
                     tempora
                     beatae dolorum cumque minima eaque ducimus ipsam velit magni commodi quae omnis reprehenderit
                     voluptates
@@ -40,7 +45,7 @@
 
     <section class="team">
         <div class="container">
-            <h2>Our Team</h2>
+            <h2 class="header-primary">Our Team</h2>
             <div class="person">
                 <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
@@ -82,7 +87,8 @@
 
     <section class="testimonial">
         <div class="container">
-            <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore beatae atque eos,
+            <blockquote class="quote-text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore beatae
+                atque eos,
                 mollitia
                 dolorum a libero laboriosam ipsum natus modi eaque voluptatibus fugit quo inventore officiis quasi nam
                 ipsam."</blockquote>
