--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap"
         rel="stylesheet">
-    <title>Monkey Business</title>
+    <title>🍌 Monkey Business</title>
 </head>
 
 <body>
     <div class="nav">
         <div class="container">
-            <div class="logo nav-logo-text">Monkey Business</div>
-            <div class="nav">
+            <div class="logo nav-logo-text">🍌 Monkey Business</div>
+            <div class="nav-list">
                 <ul>
-                    <li>Link 1</li>
-                    <li>Link 2</li>
-                    <li>Link 3</li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -45,7 +45,7 @@
 
     <section class="team">
         <div class="container">
-            <h2 class="header-primary">Our Team</h2>
+            <h2 class="h2-primary">Our Team</h2>
             <div class="person">
                 <img src="/images/person-image.png" alt="Monkey working">
                 <p class="person-name">
@@ -108,7 +108,7 @@
 
     <footer>
         <div class="container">
-            <p>Copyright © Adsy Eli 2022</p>
+            <p>Built with ❤️ by <a href="https://github.com/adsyeli">Adsy Eli</a></p>
         </div>
     </footer>
 </body>
