--- a/index.html
+++ b/index.html
@@ -29,14 +29,9 @@
 
     <div class="header">
         <div class="container">
-            <div>
-                <h1 class="hero-primary-text">This is a H1</h1>
-                <p class="hero-secondary-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis veniam ex
-                    eveniet sapiente hic,
-                    tempora
-                    beatae dolorum cumque minima eaque ducimus ipsam velit magni commodi quae omnis reprehenderit
-                    voluptates
-                    aliquid!</p>
+            <div class="info">
+                <h1 class="hero-primary-text">We mean Monkey Business.</h1>
+                <p class="hero-secondary-text">You'll go absolutely bananas over how we can impact your business.</p>
                 <button class="primary-button">Sign Up</button>
             </div>
             <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
@@ -46,41 +41,43 @@
     <section class="team">
         <div class="container">
             <h2 class="h2-primary">Our Team</h2>
-            <div class="person">
-                <img src="/images/person-image.png" alt="Monkey working">
-                <p class="person-name">
-                    Adsy Eli
-                </p>
-                <p class="person-title">
-                    Web Dev
-                </p>
-            </div>
-            <div class="person">
-                <img src="/images/person-image.png" alt="Monkey working">
-                <p class="person-name">
-                    Adsy Eli
-                </p>
-                <p class="person-title">
-                    Web Dev
-                </p>
-            </div>
-            <div class="person">
-                <img src="/images/person-image.png" alt="Monkey working">
-                <p class="person-name">
-                    Adsy Eli
-                </p>
-                <p class="person-title">
-                    Web Dev
-                </p>
-            </div>
-            <div class="person">
-                <img src="/images/person-image.png" alt="Monkey working">
-                <p class="person-name">
-                    Adsy Eli
-                </p>
-                <p class="person-title">
-                    Web Dev
-                </p>
+            <div class="people">
+                <div class="person">
+                    <img src="/images/person-image.png" alt="Monkey working">
+                    <p class="person-name">
+                        Adsy Eli
+                    </p>
+                    <p class="person-title">
+                        Web Dev
+                    </p>
+                </div>
+                <div class="person">
+                    <img src="/images/person-image.png" alt="Monkey working">
+                    <p class="person-name">
+                        Adsy Eli
+                    </p>
+                    <p class="person-title">
+                        Web Dev
+                    </p>
+                </div>
+                <div class="person">
+                    <img src="/images/person-image.png" alt="Monkey working">
+                    <p class="person-name">
+                        Adsy Eli
+                    </p>
+                    <p class="person-title">
+                        Web Dev
+                    </p>
+                </div>
+                <div class="person">
+                    <img src="/images/person-image.png" alt="Monkey working">
+                    <p class="person-name">
+                        Adsy Eli
+                    </p>
+                    <p class="person-title">
+                        Web Dev
+                    </p>
+                </div>
             </div>
         </div>
     </section>
