completed cta + quote sec

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="info">
                 <h1 class="hero-primary-text">We mean Monkey Business.</h1>
                 <p class="hero-secondary-text">You'll go absolutely bananas over how we can impact your business.</p>
-                <button class="primary-button">Sign Up</button>
+                <button class="primary-button">Contact Us</button>
             </div>
             <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
         </div>
@@ -89,23 +89,25 @@
                 mollitia
                 dolorum a libero laboriosam ipsum natus modi eaque voluptatibus fugit quo inventore officiis quasi nam
                 ipsam."</blockquote>
-            <p>- Person</p>
+            <p>- Maddie, Bananas R Us</p>
         </div>
     </section>
 
     <section class="cta">
         <div class="container">
-            <div class="cta-text">
-                <h3>Call to action!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="cta-box">
+                <div class="cta-text">
+                    <h3>Now let's get to business!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <button class="secondary-button">Contact Us</button>
             </div>
-            <button class="secondary-button">Sign Up</button>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>Built with ❤️ by <a href="https://github.com/adsyeli">Adsy Eli</a></p>
+            <p>Built with ❤️ & ☕ by <a href="https://github.com/adsyeli">Adsy Eli</a></p>
         </div>
     </footer>
 </body>
