--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="info">
                 <h1 class="hero-primary-text">We mean Monkey Business.</h1>
-                <p class="hero-secondary-text">You'll go absolutely bananas over how we can impact your business.</p>
+                <p class="hero-secondary-text">You'll go absolutely bananas over the quality of service we provide.</p>
                 <button class="primary-button">Contact Us</button>
             </div>
             <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
@@ -45,37 +45,37 @@
                 <div class="person">
                     <img src="/images/person-image.png" alt="Monkey working">
                     <p class="person-name">
-                        Adsy Eli
+                        Rafiki
                     </p>
                     <p class="person-title">
-                        Web Dev
+                        General Manager
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/person-image.png" alt="Monkey working">
+                    <img src="/images/monkey-2.png" alt="Monkey working">
                     <p class="person-name">
-                        Adsy Eli
+                        Adsy
                     </p>
                     <p class="person-title">
-                        Web Dev
+                        Head Huncho
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/person-image.png" alt="Monkey working">
+                    <img src="/images/monkey-3.png" alt="Monkey working">
                     <p class="person-name">
-                        Adsy Eli
+                        Abu
                     </p>
                     <p class="person-title">
-                        Web Dev
+                        Customer Support
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/person-image.png" alt="Monkey working">
+                    <img src="/images/monkey-4.png" alt="Monkey working">
                     <p class="person-name">
-                        Adsy Eli
+                        Chimpy
                     </p>
                     <p class="person-title">
-                        Web Dev
+                        Junior Web Dev
                     </p>
                 </div>
             </div>
@@ -84,11 +84,9 @@
 
     <section class="testimonial">
         <div class="container">
-            <blockquote class="quote-text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore beatae
-                atque eos,
-                mollitia
-                dolorum a libero laboriosam ipsum natus modi eaque voluptatibus fugit quo inventore officiis quasi nam
-                ipsam."</blockquote>
+            <blockquote class="quote-text">"These guys really do mean monkey business! I couldn't recommend a better
+                company to have working by your side. Ever since we hired Monkey Business, our banana sales have gone
+                through the roof and our conversion rate has tripled.</blockquote>
             <p>- Maddie, Bananas R Us</p>
         </div>
     </section>
@@ -98,7 +96,7 @@
             <div class="cta-box">
                 <div class="cta-text">
                     <h3>Now let's get to business!</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Let us help you reach your business goals.</p>
                 </div>
                 <button class="secondary-button">Contact Us</button>
             </div>
