--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="logo nav-logo-text">🍌 Monkey Business</div>
             <div class="nav-list">
                 <ul>
-                    <li><a href="#">Our Team</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#team">Our Team</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -32,13 +32,13 @@
             <div class="info">
                 <h1 class="hero-primary-text">We mean Monkey Business.</h1>
                 <p class="hero-secondary-text">You'll go absolutely bananas over the quality of service we provide.</p>
-                <button class="primary-button">Contact Us</button>
+                <a href="#contact"><button class="primary-button">Contact Us</button></a>
             </div>
             <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
         </div>
     </div>
 
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <h2 class="h2-primary">Our Team</h2>
             <div class="people">
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <section class="testimonial">
+    <section class="testimonial" id="testimonials">
         <div class="container">
             <blockquote class="quote-text">"These guys really do mean monkey business! I couldn't recommend a better
                 company to have working by your side. Ever since we hired Monkey Business, our banana sales have gone
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    <section class="cta">
+    <section class="cta" id="contact">
         <div class="container">
             <div class="cta-box">
                 <div class="cta-text">
