--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="hero-secondary-text">You'll go absolutely bananas over the quality of service we provide.</p>
                 <a href="#contact"><button class="primary-button">Contact Us</button></a>
             </div>
-            <img src="/images/banner-image.png" alt="Just a bunch of monkeys">
+            <img src="./images/banner-image.png" alt="Just a bunch of monkeys">
         </div>
     </div>
 
@@ -43,7 +43,7 @@
             <h2 class="h2-primary">Our Team</h2>
             <div class="people">
                 <div class="person">
-                    <img src="/images/person-image.png" alt="Monkey working">
+                    <img src="./images/person-image.png" alt="Monkey working">
                     <p class="person-name">
                         Rafiki
                     </p>
@@ -52,7 +52,7 @@
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/monkey-2.png" alt="Monkey working">
+                    <img src="./images/monkey-2.png" alt="Monkey working">
                     <p class="person-name">
                         Adsy
                     </p>
@@ -61,7 +61,7 @@
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/monkey-3.png" alt="Monkey working">
+                    <img src="./images/monkey-3.png" alt="Monkey working">
                     <p class="person-name">
                         Abu
                     </p>
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="person">
-                    <img src="/images/monkey-4.png" alt="Monkey working">
+                    <img src="./images/monkey-4.png" alt="Monkey working">
                     <p class="person-name">
                         Chimpy
                     </p>
